fixing bugs on mobile view and contact card function missing

--- a/src/style.css
+++ b/src/style.css
@@ -134,7 +134,9 @@ body {
 /* Phone Container  */
 .phone-container {
     height: 98%;
+    width: 97%;
     max-width: 500px;
+    width: 97%;
     display: flex;
     flex-direction: column;
     flex: 1;
